--- a/css/media.css
+++ b/css/media.css
@@ -56,19 +56,22 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: flex-start;
-		padding: 100px 15px;
+		padding: 150px 15px 100px 15px;
 	}
 
 	.burger {
 		display: block;
 		margin-left: auto;
 		margin-right: 5%;
-		margin-top: -15%;
 	}
 
 	.fz--color {
 		font-size: 30px !important;
 		color: rgba(33, 54, 117, 0.9);
+	}
+
+	.title {
+		font-size: 28px;
 	}
 }
 
@@ -83,6 +86,10 @@
 
 	.card__item {
 		width: 100%;
+	}
+
+	.title {
+		font-size: 20px;
 	}
 }
 
